--- a/index.html
+++ b/index.html
@@ -3,18 +3,19 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>eco-energy-exchange</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <title>GridXchange - Solar Energy Exchange</title>
+    <link rel="icon" href="data:?v=1" />
+    <link rel="shortcut icon" href="data:?v=1" />
+    <link rel="apple-touch-icon" href="data:?v=1" />
+    <meta name="description" content="GridXchange - Peer-to-Peer Solar Power Sharing Platform" />
+    <meta name="author" content="GridXchange Team" />
 
-    <meta property="og:title" content="eco-energy-exchange" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:title" content="GridXchange" />
+    <meta property="og:description" content="Peer-to-Peer Solar Power Sharing Platform" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:site" content="@gridxchange" />
   </head>
 
   <body>
